--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/core": "^7.22.0",
     "@babel/preset-env": "^7.22.0",
     "@babel/preset-react": "^7.22.0",
+    "@babel/preset-flow": "^7.22.0",
     "babel-jest": "^29.5.0"
   }
 }
